--- a/main-page.css
+++ b/main-page.css
@@ -1,14 +1,21 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+}
+
 body {
     background-color: rgba(0, 0, 0,0.8);
     margin: 0;
     padding: 0;
+    height: 100vh;
     font-family: "apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 header {
     position: relative;
-    margin: 0px auto;
-    padding: 5px 0;
+    margin-top: 10px;
 }
 
 .nav img {
@@ -16,21 +23,23 @@ header {
 }
 
 .nav {
-    margin-left: 15rem;
+    margin-left: 14rem;
     cursor: pointer;
-}
-
-.nav h1 {
-    color: #fff;
-    font-size: 22px;
+    position: relative;
 }
 
 .nav ul {
-    text-align: left;
-    align-items: center;
     display: flex;
-    padding: 8px 15px;
-    height: 2px;
+    align-items: center;
+    gap: 5px;
+    list-style: none;
+    flex-wrap: nowrap;
+}
+
+.nav ul h1 {
+    font-size: 22px;
+    color: #fff;
+    white-space: nowrap;
 }
 
 .nav ul li {
@@ -42,7 +51,7 @@ header {
     text-decoration: none;
     font-size: 15px;
     transition: background 0.5s;
-    padding: 8px 15px;
+    padding: 12px 15px;
 }
 
 .nav ul li a:hover {
@@ -50,10 +59,101 @@ header {
 }
 
 .nav input {
-    height: 30px;
-    width: 12rem;
+    position: absolute;
+    right: 0;
+    height: 40px;
+    width: 10rem;
     font-weight: bold;
     font-size: 15px;
-    margin-left: 40rem;
+    transition: width 0.5s ease;
+    box-sizing: border-box;
+    padding: 0 8px;
+    margin-right: 140px;
+}
 
+.nav input:focus {
+    width: 20rem;
+    outline: none;
+}
+
+
+.content {
+    padding: 10px;
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.videos-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px; 
+    justify-items: center; 
+    align-items: center;
+    margin: 20px; 
+    max-width: 1100px;
+}
+
+.content h6 {
+    color: #fff; 
+    font-weight: lighter; 
+    margin: 5px;
+    margin-right: 58rem;    
+    font-size: 30px;
+}
+
+.uploads:hover {
+    transform: scale(1.05);
+}
+
+.uploads img {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    filter: brightness(50%);
+    transition: brightness 0.5s ease;
+}
+
+.uploads img:hover {
+    filter: brightness(80%);
+}
+
+.uploads {
+    position: relative;        
+    width: 280px;
+    height: 160px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    overflow: hidden;       
+}
+
+.uploads h5,
+.uploads h2 {
+    position: absolute;       
+    color: #ffffff;
+    display: inline-block;
+    margin: 0;
+    white-space: nowrap;
+    font-size: 12px;
+    margin-bottom: 5px;
+    font-weight: 500;
+}
+
+.uploads h5 {           
+    left: 0;           
+    bottom: 0;          
+    text-align: left;    
+    margin-left: 10px;
+
+}
+
+.uploads h2 {              
+    right: 0;                
+    bottom: 0;            
+    text-align: right;      
+    margin-right: 10px;
 }
