--- a/main-page.css
+++ b/main-page.css
@@ -7,8 +7,6 @@
 
 body {
     background-color: rgba(0, 0, 0,0.8);
-    margin: 0;
-    padding: 0;
     height: 100vh;
     font-family: "apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -23,7 +21,7 @@ header {
 }
 
 .nav {
-    margin-left: 14rem;
+    margin-left: 18rem;
     cursor: pointer;
     position: relative;
 }
@@ -50,7 +48,7 @@ header {
     color: #fff;
     text-decoration: none;
     font-size: 15px;
-    transition: background 0.5s;
+    transition: background 0.5s ease-in-out;
     padding: 12px 15px;
 }
 
@@ -66,9 +64,9 @@ header {
     font-weight: bold;
     font-size: 15px;
     transition: width 0.5s ease;
-    box-sizing: border-box;
     padding: 0 8px;
-    margin-right: 140px;
+    margin-right: 18rem;
+    color: #000;
 }
 
 .nav input:focus {
@@ -89,7 +87,7 @@ header {
 
 .videos-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 15px; 
     justify-items: center; 
     align-items: center;
@@ -122,18 +120,18 @@ header {
 }
 
 .uploads {
-    position: relative;        
-    width: 280px;
-    height: 160px;
+    position: relative;       
+    width: 350px;
+    height: 200px;
     border-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s ease;
-    overflow: hidden;       
+    overflow: hidden;    
 }
 
 .uploads h5,
 .uploads h2 {
-    position: absolute;       
+    position: absolute;        
     color: #ffffff;
     display: inline-block;
     margin: 0;
@@ -143,17 +141,30 @@ header {
     font-weight: 500;
 }
 
-.uploads h5 {           
-    left: 0;           
-    bottom: 0;          
-    text-align: left;    
+.uploads h5 {        
+    left: 0;            
+    bottom: 0;         
+    text-align: left;  
     margin-left: 10px;
 
 }
 
-.uploads h2 {              
+.uploads h2 {               
     right: 0;                
-    bottom: 0;            
+    bottom: 0;             
     text-align: right;      
     margin-right: 10px;
+    font-weight: bolder;
+}
+
+.page {
+    justify-content: center;
+    display: grid;
+    align-items: center;
+    text-align: center;
+}
+
+.btn {
+    background-color: #000;
+    padding: 5px 5px;
 }
